add font style index, home

--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -8,3 +8,11 @@ a {
     text-decoration: none;
   }
   
+  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@700&display=swap');
+
+  body {
+    font-family: 'IBM Plex Sans Thai', sans-serif;
+  }
+  nav{
+    font-family: 'IBM Plex Sans Thai', sans-serif;
+  }
