--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,15 +2,37 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"crossorigin="anonymous"></script>
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@700&display=swap" rel="stylesheet">
+<style>
+  
+  .button {
+    background-color: #008CBA; /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 10px;
+    margin: 2px 2px;
+    cursor: pointer;
+  }
+  
+  .button1 {padding: 10px 20px;}
+  </style>
+</head>
 
 <nav class="navbar navbar-dark bg-dark ">
   <a [routerLink]="['/home']"><span class="navbar-brand mb-0 h1">WU Bionical </span></a>
-  <form class="col-10 col-lg-auto mb-2 mb-lg-0 me-lg-2" [formGroup]="form" (ngSubmit)="submit()">
-    <input formControlName="keyword" type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-    
+  <form class="d-flex" [formGroup]="form" (ngSubmit)="submit()">
+    <input formControlName="keyword" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-success" type="submit">Search</button>
   </form>
-  <button class="btn btn-success" type="submit">Search</button>
+ 
 </nav>
+<body>
 <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light mb-2">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">ระบบสืบค้นสวนพฤษาศาตร์ Solr</a>
@@ -33,15 +55,15 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
-            <h6 class=""></h6> <h6 class="btn btn-success">  {{numfound|number}} ชนิด</h6>
-            <table class="table">
+            <h6 class=""></h6> <h6 class="btn btn-primary">  พบ {{numfound|number}} ชนิด</h6>
+            <table class="table table-striped table-sm">
               <thead class="bg-success text-white">
                 <tr>
                   <th scope="col" >อันดับ</th>
                   <th scope="col">ชื่อ</th>
                   <th scope="col">ชื่อวิทยาศาสตร์</th>
                   <th scope="col">ชื่อวงศ์</th>
-                  <th scope="col"></th>
+                  <th scope="col">เพิ่มเติม</th>
                   <!-- <th scope="col">Author</th>
                   <th scope="col">Publisher</th> -->
                 </tr>
@@ -50,9 +72,9 @@
                 <tr *ngFor="let item of book; let i = index">
                   <th scope="row">{{ i + 1 }}</th>
                   <td><a [routerLink]="['/detail', item.id]"class="link">{{ item.name }}</a></td>
-                  <td>{{ item.scientific_name }}</td>
-                  <td>{{ item.family_name }}</td>
-                  <td><a [routerLink]="['/detail', item.id]"class="link"><button>ดูรายละเอียด</button></a></td>
+                  <td [style.font-weight]="'thin'">{{ item.scientific_name }}</td>
+                  <td style="color: #245426;"><i style="font-style: italic;">{{ item.family_name }}</i></td>
+                  <td><a [routerLink]="['/detail', item.id]"class="link"><button class="button button1">ดูรายละเอียด</button></a></td>
                   <!-- <td>{{ item.author }}</td>
                   <td>{{ item.publisher }}</td> -->
                 </tr>
@@ -61,7 +83,26 @@
           </div>
         </div>
       </div>
-    
+    </body>
+      <div class="col-4">
+        <div class="card">
+          <div class="card-header">
+            <h2>Filter</h2>
+          </div>
+          <div class="card-body">
+            <h4>ชื่อวงศ์</h4>
+            <ol class="list-group list-group-numbered">
+              <li *ngFor="let item of facetfamily_name|slice:0:10"
+                class="list-group-item d-flex justify-content-between align-items-start"
+              >
+                <div class="ms-2 me-auto">
+                  <div class="fw-bold">{{item.data}}</div>
+                </div>
+                <span class="badge bg-primary rounded-pill">{{item.count}}</span>
+              </li>
+            </ol>
+          </div>
+       
     <!-- <div class="col-4">
       <h6 class=""></h6>
       <div class="card">
