--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'IBM Plex Sans Thai', sans-serif;
   }
-  nav{
+  .navg{
     font-family: 'IBM Plex Sans Thai', sans-serif;
   } 
   
