--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -1,4 +1,4 @@
-a {
+/* a {
     color: inherit;
     text-decoration: none;
   }
@@ -6,13 +6,49 @@ a {
   .link {
     color: inherit;
     text-decoration: none;
-  }
+  } */
   
   @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@700&display=swap');
 
-  body {
+  /* body {
     font-family: 'IBM Plex Sans Thai', sans-serif;
   }
   nav{
     font-family: 'IBM Plex Sans Thai', sans-serif;
+  } */
+
+  a {
+    color: inherit;
+    text-decoration: none;
   }
+  .link {
+    color: inherit;
+    text-decoration: none;
+  }
+  
+body{
+    background-color: #ffffff;
+    /* font-family: Mitr; */
+    font-family: 'IBM Plex Sans Thai', sans-serif;
+
+}
+
+.navg{
+  font-size: 20px;
+}
+
+.bnt-search{
+  font-size: 15px;
+}
+
+.bnt-detail{
+  font-size: 16px;
+}
+
+.text-detail{
+  font-size: 18px;
+}
+.box {
+  width: 200px;
+  margin-right: -1100px;
+}
