--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -22,7 +22,7 @@
         <br/>
         <h4 class="btn btn-secondary"> {{numfound|number}} ชนิด</h4>
         <br/>
-        <table class="table">
+        <table class="table table-striped">
           <thead class="bg-success text-white text-detail">
             <tr>
               <th scope="col text-detail">อันดับ</th>
