index hot fix ♥

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
         crossorigin="anonymous"></script>
     <nav class="navbar navbar-dark bg-dark">
         <span class="navbar-brand navg">WU Bionical </span>
-        <a class="nav-link px-2 text-white"[routerLink]="['/index']"><button class="btn btn-success bnt-search">Let's Search</button></a>
+        <a class="nav-link px-2 text-white"[routerLink]="['/index']"><button class="btn btn-success bnt-search">เริ่มค้นหาเลย !</button></a>
     </nav>
     <main>
             <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
