--- a/src/app/detail/detail.component.css
+++ b/src/app/detail/detail.component.css
@@ -2,6 +2,7 @@ body{
     background-color: #ffffff;
     padding-top: 36px;
     font-family: Mitr;
+    /* font-family: 'IBM Plex Sans Thai', sans-serif; */
 }
 .card {
     margin-top: 10px;
@@ -29,3 +30,4 @@ body{
 p{
     font-size: 18px;
 }
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@700&display=swap');
