--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -10,8 +10,10 @@
       <div class="card-body" >
         <div class="row">
          
-          <div class="col-5 d-flex justify-content-center ">
-            <img src="https://t4.ftcdn.net/jpg/04/72/65/73/360_F_472657366_6kV9ztFQ3OkIuBCkjjL8qPmqnuagktXU.jpg" class="rounded">
+          <div class="col-5 d-flex justify-content-center">
+            <div class="hover-zoom">
+              <img src="{{ item.picture }}" class="rounded" width="100%" height="100%">
+            </div>
           </div>
           <div class="col-7"> 
               <button type="button" class="btn btn-danger" onclick="history.back()">Back</button>
