--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -47,6 +47,24 @@
       </div>
     </div>
   </div>
+
+  <div class="card-body">
+    <h4>ชื่่อวงศ์</h4>
+    <div *ngIf="isLoading">
+      <p>กำลังโหลดข้อมูล...</p>
+    </div>
+    <ol class="list-group list-group-numbered">
+        <!-- loop -->
+      <li *ngFor="let item of facetname|slice:0:10"   
+        class="list-group-item d-flex justify-content-between align-items-start"
+      >
+        <div class="ms-2 me-auto">
+          <div class="fw-bold">{{item.data}}</div>
+        </div>
+        <span class="badge bg-primary rounded-pill">{{item.count}}</span>
+      </li>
+    </ol>
+  </div>
 </body>
 
       
